# cfp-selection-simulator

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_VISUAL.txt  INDUSTRY_READY_CHECKLIST.md  Makefile  README.md  READY_TO_TEST.md  UPGRADE.md  VISUALIZATION_UPGRADES.md  docker-compose.yml  pyproject.toml  requirements-worker.txt  requirements.txt
.cursor/plans/: hosted_runs_v1.plan.md  option_b_run_jobs_e25d06fb.plan.md  selection_room_vision_5f27cf0d.plan.md  v2_research_and_v1_validation.plan.md  validation_dashboard_mvp.plan.md  vision_progress_assessment_ca926609.plan.md  vision_status_cleanup.plan.md
.github/workflows/: ci.yml
.ipython/profile_default/: history.sqlite
.jupyter/: migrated
app/: components.py  streamlit_app.py  styles.py
app/components/: __init__.py  bracket_viewer.py  ui.py
app/static/: bracket.css
configs/: 2024.yaml  2025.yaml  sample.yaml  validation.yaml
data/cache/: team_assets.sample.json
docker/: Dockerfile  requirements.txt
docs/: ANALYSIS_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  METHODOLOGY.md  PROJECT_STRUCTURE.md  RANKING_METHODOLOGY_SUMMARY.md  README.md  STAGE_1_2_COMPLETE.md  api-contracts.md  cli-reference.md  configuration.md  dashboard-guide.md  development.md  index.md  launch-drafts.md  output-files.md  project-structure.md  quickstart.md  user-guide.md  web-app.md
docs/architecture/: hosted-production.md
docs/hosting/: deployment-checklist.md  hosted-runs-v1.md  render-feasibility-checklist.md  supabase-project.md  supabase-setup.md  trigger-worker.md
docs/release/: public-demo-readiness.md
docs/research/: README.md  calibration.md  cfp-committee-alignment.md  cfp-format-history.md  committee-emulation.md  data-sources.md  historical-validation.md  index.md  limitations-and-ethics.md  metric-definitions.md  model-methodology.md  revealed-committee-preferences.md  sensitivity-analysis.md  sor-refinement.md  v2-tracks-research.md
lib/: utils.sh
notebooks/: 00_configuration.ipynb  01_data_pipeline.ipynb  02_ranking_algorithms.ipynb  03_composite_rankings.ipynb  03_composite_rankings_OLD.ipynb  04_playoff_selection.ipynb  04_resume_analysis.ipynb  05_playoff_selection.ipynb  05_validation_backtesting.ipynb  06_quick_simulator.ipynb  06_visualization_report.ipynb  07_quick_simulator.ipynb  08_validation_backtesting.ipynb  README.md  notebook_utils.py
scripts/: README.md  bootstrap-hosted-env.sh  create-hosted-test-job.mjs  demo.sh  hosted-smoke.sh  hosted-worker-smoke.sh  seed-hosted-catalog.mjs  sync-vercel-hosted-env.sh  update-hosted-auth-urls.sh  vercel-link-demo.sh  vercel-link-hosted.sh
src/: __init__.py
src/api_contracts/: __init__.py  build.py  export.py  models.py  records.py  selection_case.py
src/assets/: __init__.py  colors.py  logos.py  teams.py
src/calibration/: __init__.py  decisions.py  emulation.py  experiments.py  harness.py  outputs.py  ppa.py  revealed_preferences.py  revealed_preferences_outputs.py  sor_variants.py
src/cli/: console.py  doctor.py  main.py  store_commands.py  worker_commands.py
src/config/: __init__.py  conferences.py  formats.py  simulator.py
src/data/: _cfbd_compat.py  fetcher.py
src/pipeline/: cache_paths.py  composite.py  default_week.py  live.py  locks.py  paths.py  run.py  sample.py  weights.py
src/playoff/: __init__.py  bracket.py  bracket_plotly.py  bracket_view.py
src/rankings/: __init__.py  algorithms.py  baseline.py
src/selection/: __init__.py  audit.py  conference_champions.py  field.py  seeding.py  tiebreakers.py
src/store/: __init__.py  connection.py  mappers.py  paths.py  policy.py  reader.py  rebuild.py  schema.py  writer.py
src/utils/: conference.py  metrics.py
src/validation/: __init__.py  backtest.py  cfp_weekly.py  committee_validation.py  era.py  historical.py  metrics.py  predictive_validation.py  reports.py  selection_validation.py  sensitivity.py
src/worker/: artifact_keys.py  postgres.py  redaction.py  run_job.py  storage.py
supabase/: config.toml
supabase/migrations/: 20250704180000_hosted_runs_v1.sql  20250704181500_hosted_artifacts_bucket.sql  20260705180000_run_jobs_user_id.sql
tests/: __init__.py  conftest.py  test_api_contract_build.py  test_api_contracts.py  test_assets.py  test_bracket_view.py  test_calibration.py  test_ccg_fetch.py  test_cfp_weekly_fixtures.py  test_committee_comparison.py  test_committee_emulation.py  test_composite.py  test_conference_champions.py  test_data_fetcher.py  test_default_week.py  test_export_lock.py  test_field.py  test_games_cache.py  test_live.py  test_pipeline.py  test_ppa_substitution.py  test_revealed_preferences.py  test_revealed_preferences_weekly.py  test_run_identity.py  test_sample.py  test_scenario_run.py  test_seeding_2024.py  test_seeding_2025.py  test_selection_case.py  test_sensitivity.py  test_sor_variants.py  test_store_failure_policy.py  test_store_rebuild.py  test_store_writer.py  test_team_records.py  test_tiebreakers.py  test_validation_contract.py  test_validation_harness.py  test_worker.py  test_worker_postgres.py
tests/fixtures/: revealed_preferences_payload_keys.json  (+1 more)
web/: .env.example  .gitignore  .trigger-project-ref  .vade-report  eslint.config.mjs  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  trigger-project.ts  trigger.config.ts  vercel.json
(+341 files in other folders)
